[package]
name = "nes-emulator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.0"
rand = "=0.7.3"
serde = "1.0.136"
rmp = "0.8.11"
serde_derive = "1.0.136"
rmp-serde = "1.1.0"
serde-big-array = "0.4.1"